# websocket-benchmark

./: golang result  index.xlsx  rankings.md  rust result  rust2 result  ts results
rust-ws/: Cargo.toml  rust-bench.md  rust-cpu.txt
rust-ws/config/: rust.fuzzingclient.json
rust-ws/reports/server/: index.html  index.json  tungstenite_case_10_1_1.html  tungstenite_case_10_1_1.json  tungstenite_case_12_1_1.html  tungstenite_case_12_1_1.json  tungstenite_case_12_1_10.html  tungstenite_case_12_1_10.json  tungstenite_case_12_1_11.html  tungstenite_case_12_1_11.json  tungstenite_case_12_1_12.html  tungstenite_case_12_1_12.json  tungstenite_case_12_1_13.html  tungstenite_case_12_1_13.json  tungstenite_case_12_1_14.html  tungstenite_case_12_1_14.json  tungstenite_case_12_1_15.html  tungstenite_case_12_1_15.json  tungstenite_case_12_1_16.html  tungstenite_case_12_1_16.json  tungstenite_case_12_1_17.html  tungstenite_case_12_1_17.json  tungstenite_case_12_1_18.html  tungstenite_case_12_1_18.json  tungstenite_case_12_1_2.html  tungstenite_case_12_1_2.json  tungstenite_case_12_1_3.html  tungstenite_case_12_1_3.json  tungstenite_case_12_1_4.html  tungstenite_case_12_1_4.json  tungstenite_case_12_1_5.html  tungstenite_case_12_1_5.json  tungstenite_case_12_1_6.html  tungstenite_case_12_1_6.json  tungstenite_case_12_1_7.html  tungstenite_case_12_1_7.json  tungstenite_case_12_1_8.html  tungstenite_case_12_1_8.json  tungstenite_case_12_1_9.html  (+997 more)
rust2-ws/: Cargo.toml  rust2-bench.md  rust2-cpu.txt
rust2-ws/config/: rust.fuzzingclient.json
rust2-ws/src/: main.rs
ts-ws/: main.ts  (+4 more)
(+5986 files in other folders)
