[package]
name = "rust-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
tokio = { version = "1.28.2", features = ['macros', 'rt-multi-thread'] }
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"
