[package]
name = "rust2-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.19"
soketto = { version = "0.7.1", features = ["deflate"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
